# tsuki

./: Cargo.toml  README.md  debug.sh  main.c  meson.build  signals.c  widgets.c
examples/: bar.lua  init.lua
examples/config/: init.lua
include/: service.h  signals.h  widgets.h
include/services/: hyprland.h
lib/: meson.build
lib/tsuki/: init.lua
lib/tsuki/helper/: init.lua
lib/tsuki/widget/: init.lua
src/: main.c  main.rs  meson.build  service.c  signals.c  widgets.c
src/services/: hyprland.c
src/surfaces/: mod.rs
src/widgets/: mod.rs  widgets.c  widgets.lua
