[package]
name = "tsuki-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mlua]
package = "mlua"
version = "0.9.2"
features = ["luau-jit", "macros"]

[dependencies.gtk]
package = "gtk4"
version = "0.7.3"

[dependencies]
xdg = "^2.1"
